# OceanDo

./: .env.example  README.md  pyproject.toml
ocean_do/: manage.py
ocean_do/accounts/: admin.py  apps.py  forms.py  manager.py  models.py  urls.py  utils.py  views.py
ocean_do/accounts/templates/accounts/: code-verification.html  email.html  email_template.html  login.html  new-password.html  register.html  register_base.html
ocean_do/ocean_do/: asgi.py  aws.py  consumers.py  custom_contex_process.py  routing.py  settings.py  signals.py  urls.py  views.py  wsgi.py
ocean_do/ocean_do/static/css/: reset.css  style.css
ocean_do/ocean_do/static/js/: script.js
ocean_do/ocean_do/statics/css/: style.css
ocean_do/ocean_do/templates/ocean_do/: base.html  index.html  pages_base.html
ocean_do/ocean_do/templates/ocean_do/partials/: main-side-menu.html
ocean_do/tasks/: admin.py  apps.py  form.py  models.py  urls.py  utils.py  views.py
ocean_do/tasks/templates/tasks/: all-tasks.html  assign-edit-task.html  calendar.html  completed-tasks.html  create-task.html  creator-task-view.html  derivative-tasks.html  edit-task.html  email_template.html  folder-tasks.html  task-info.html  tasks.html
ocean_do/tasks/templates/tasks/partials/: calendar-side-menu.html  task-comment.html  task-side-menu.html  tasks.html
ocean_do/tasks/templates/tasks/task-type/: assigned-task.html  (+2 more)
ocean_do/users/: apps.py  forms.py  urls.py  views.py
ocean_do/users/templates/users/: create-group.html  edit-group.html  edit-profile.html  group.html  personal-stats.html  profile.html
(+2 files in other folders)
