[tool.poetry]
name = "oceando"
version = "0.1.0"
description = ""
authors = ["JuliManhupli <juliamangup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
python-dotenv = "^1.0.1"
pyotp = "^2.9.0"
boto3 = "^1.34.78"
django-storages = "^1.14.2"
channels = {extras = ["daphne"], version = "^4.1.0"}
psycopg2 = "^2.9.9"
shortuuid = "^1.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
